@@ -25,7 +25,6 @@ Zope2.startup()
 
 import Acquisition
 
-
 class DummyUserFolder(Acquisition.Implicit):
 
     def __init__(self):
@@ -41,6 +40,9 @@ class DummyUserFolder(Acquisition.Implicit):
         # Emulate AccessControl.User's stupid behavior (should test None)
         user.roles = tuple(roles)
         user.domains = tuple(domains)
+
+    def getUsers(self):
+        return self._users.values()
 
 
 class DummyUser(Acquisition.Implicit):
@@ -103,6 +105,37 @@ class MemberDataToolTests(TestCase):
         self.failUnless( tool.deleteMemberData('user_foo') )
         self.failIf( tool._members.has_key('user_foo') )
         self.failIf( tool.deleteMemberData('user_foo') )
+
+    def test_pruneMemberData(self):
+        # This needs a tad more setup
+        from OFS.Folder import Folder
+        from Products.CMFCore.MembershipTool import MembershipTool
+        folder = Folder('test')
+        folder._setObject('portal_memberdata', self._makeOne())
+        folder._setObject('portal_membership', MembershipTool())
+        folder._setObject('acl_users', DummyUserFolder())
+        tool = folder.portal_memberdata
+
+        # Create some members
+        for i in range(20):
+            tool.registerMemberData( 'Dummy_%i' % i
+                                   , 'user_foo_%i' % i
+                                   )
+
+        # None of these fake members are in the user folder, which means
+        # there are 20 members and 20 "orphans"
+        contents = tool.getMemberDataContents()
+        info_dict = contents[0]
+        self.assertEqual(info_dict['member_count'], 20)
+        self.assertEqual(info_dict['orphan_count'], 20)
+
+        # Calling the prune method should delete all orphans, so we end
+        # up with no members in the tool.
+        tool.pruneMemberDataContents()
+        contents = tool.getMemberDataContents()
+        info_dict = contents[0]
+        self.assertEqual(info_dict['member_count'], 0)
+        self.assertEqual(info_dict['orphan_count'], 0)
 
 
 class MemberDataTests(TestCase):
